--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     </head>
     <body>
-        <header>
+        <header class="page-header">
             <div class="container">
                 <h1><a href="/">Blog de na Catalina</a></h1>
             </div>
